refactor poms